# QTStopWatch

./: CMakeLists.txt  README.md  StopWatch.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  stop_watch_impl.h
